--- a/Onthemove/templates/Onthemove/index.html
+++ b/Onthemove/templates/Onthemove/index.html
@@ -27,17 +27,19 @@
 
 <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script> -->
 
-       
+
 <div id="status">
 </div>
 <div id="googleMap"></div>
-<div class="form-group">
-	<label>Start Date:</label>
-	<input class="form-control date-picker" id="start-date-datepicker" name="date" type="text">
-</div>
-<div class="form-group">
-	<label class="">End Date:</label>
-	<input class="form-control date-picker" id="end-date-datepicker" name="date" type="text">
+<div id="date-filter">
+	<div class="form-group">
+		<label>Start Date:</label>
+		<input class="form-control date-picker" id="start-date-datepicker" name="date" type="text">
+	</div>
+	<div class="form-group">
+		<label class="">End Date:</label>
+		<input class="form-control date-picker" id="end-date-datepicker" name="date" type="text">
+	</div>
 </div>
 
 <!--
@@ -68,26 +70,33 @@ $(document).ready(function(){
 		}
 		);
 
-		$("#ui-input-clear").click(function(e){
-		   		e.preventDefault();
+		$("#ui-input-clear").click(function(e) {
+			e.preventDefault();
 			$("#pac-input").val('');
-			
-			navigator.geolocation.getCurrentPosition(
-	    	function(pos){
-		    	var act = {{activity_info|safe}};
-		    	var loc = {{location_info|safe}};
-		    	GoogleMap.init(pos,act,loc);
-	    	},
-		    function(){
-		    	alert('Geo location is not supported');
-		   	}
-		);
+			timeQuery();
+			// navigator.geolocation.getCurrentPosition(
+			// 	function(pos) {
+			// 		var act = {
+			// 			{
+			// 				activity_info | safe
+			// 			}
+			// 		};
+			// 		var loc = {
+			// 			{
+			// 				location_info | safe
+			// 			}
+			// 		};
+			// 		GoogleMap.init(pos, act, loc);
+			// 	},
+			// 	function() {
+			// 		alert('Geo location is not supported');
+			// 	}
+			// );
 		});
 
 });
+
 </script>
-
-
 
 <script>
 $(function(){
@@ -102,56 +111,58 @@ $(function(){
 
 	});
 
-	timeQuery();
-
-	function getDayAtOffset(offset) {
-		var date = new Date();
-		date.setDate(date.getDate() + offset)
-		var dd = date.getDate();
-		var mm = date.getMonth() + 1;
-		var yy = date.getFullYear();
-
-		return mm.toString() + '/' + dd.toString() + '/' + yy.toString();
-	}
-
-	function timeQuery() {
-		var csrf = document.cookie.split('=')[1];
-		var path = "{{time_path}}",
-		data = {"csrfmiddlewaretoken": csrf};
-		data["start"] = orderDateString($('#start-date-datepicker').val());
-		data["end"] = orderDateString($('#end-date-datepicker').val());
-		$.ajax({
-			type: "POST",
-			dataType:"text",
-			data:data,
-			url:path,
-			success:function(response){
-				var parsedResponse = $.parseJSON(response);
-				navigator.geolocation.getCurrentPosition(
-					function(pos){
-						var loc = parsedResponse.location_info;
-						var act = $.parseJSON(parsedResponse.activity_info);
-						GoogleMap.init(pos,act,loc);
-					},
-					function(){
-						alert('Geo location is not supported');
-					});
-			},
-			error:function(error){
-				console.log(error);
-			}
-		});
-	}
-
-	function orderDateString(str) {
-		var dateArray = str.split('/');
-		var month = dateArray[0];
-		var day = dateArray[1];
-		var year = dateArray[2];
-
-		return year + "-" + month + "-" + day;
-	}
+	$(window).load(function(e) {
+		timeQuery();
+	});
 });
+
+function getDayAtOffset(offset) {
+	var date = new Date();
+	date.setDate(date.getDate() + offset)
+	var dd = date.getDate();
+	var mm = date.getMonth() + 1;
+	var yy = date.getFullYear();
+
+	return mm.toString() + '/' + dd.toString() + '/' + yy.toString();
+}
+
+function timeQuery() {
+	var csrf = document.cookie.split('=')[1];
+	var path = "{{time_path}}",
+	data = {"csrfmiddlewaretoken": csrf};
+	data["start"] = orderDateString($('#start-date-datepicker').val());
+	data["end"] = orderDateString($('#end-date-datepicker').val());
+	$.ajax({
+		type: "POST",
+		dataType:"text",
+		data:data,
+		url:path,
+		success:function(response){
+			var parsedResponse = $.parseJSON(response);
+			navigator.geolocation.getCurrentPosition(
+				function(pos){
+					var loc = parsedResponse.location_info;
+					var act = $.parseJSON(parsedResponse.activity_info);
+					GoogleMap.init(pos,act,loc);
+				},
+				function(){
+					alert('Geo location is not supported');
+				});
+		},
+		error:function(error){
+			console.log(error);
+		}
+	});
+}
+
+function orderDateString(str) {
+	var dateArray = str.split('/');
+	var month = dateArray[0];
+	var day = dateArray[1];
+	var year = dateArray[2];
+
+	return year + "-" + month + "-" + day;
+}
 
 </script>
 
