fixed css for current location button

--- a/Onthemove/templates/Onthemove/index.html
+++ b/Onthemove/templates/Onthemove/index.html
@@ -19,8 +19,8 @@
 	<div class="input-group">
 		<input id="pac-input" type="text" class="form-control" placeholder="Enter Location">
 		<span class="input-group-btn">
-			<button id="current-location-button" class="btn btn-default" type="button">
-				<span id="input-x" class="glyphicon glyphicon-map-marker">
+			<button id="current-location-button" style="padding-top:6px; padding-bottom:6px;"class="btn btn-default">
+				<span class="glyphicon glyphicon-map-marker">
 				</span>
 			</button>
 		</span>
