--- a/Activities/templates/Activities/addUser.html
+++ b/Activities/templates/Activities/addUser.html
@@ -13,7 +13,11 @@
 	 </div>
 	  <div class="col-xs-6">
 	  	<h3>{{ user_name }}</h3>
-	  	<img class="act-logo" src="{%static "img/person_placeholder.png"%}">
+	  	{%if user_gender == 'M'%}
+      		<img class = "profile-picture" src = "{%static "Users/img/user_img/man.png"%}"/>
+      	{%else%}
+      		<img class = 'profile-picture' src = "{%static "Users/img/user_img/woman.png"%}"/>
+      	{%endif%}
 	  </div>
 
 	  <div class="col-xs-6">
